<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/orchard_login_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:minWidth="368dp"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_input_text_layout"
        style="@style/LoginInputLayout">

        <android.support.v7.widget.AppCompatEditText
            style="@style/LoginEditText"
            android:hint="@string/username"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_input_text_layout"
        style="@style/LoginInputLayout">

        <android.support.v7.widget.AppCompatEditText
            style="@style/LoginEditText"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/LoginButton"
        android:text="@string/login" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="@style/LoginButtonBorderless"
            android:layout_gravity="end"
            android:text="@string/register" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_recover_password"
            style="@style/LoginButtonBorderless"
            android:layout_gravity="start"
            android:text="@string/recover_password" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/login_divider_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/login_text_color" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="OR"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/login_text_color" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/login_text_color" />
    </LinearLayout>
</LinearLayout>