<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin"
            android:scrollbars="none"
            tools:context=".login.orchard.OrchardRegisterFragment"
            android:id="@+id/registerScrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <include layout="@layout/common_login_layout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input_text_layout"
            android:hint="@string/username"
            style="@style/LoginInputLayout">

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/LoginEditText"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_text_layout"
            android:hint="@string/password"
            style="@style/LoginInputLayout">

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/LoginEditText"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_confirm_text_layout"
            android:hint="@string/confirm_password"
            style="@style/LoginInputLayout">

            <EditText
                style="@style/LoginEditText"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telephone_number_text_layout"
            android:hint="@string/telephone_number"
            style="@style/LoginInputLayout"
            android:visibility="gone">

            <EditText
                style="@style/LoginEditText"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/acceptPrivacyContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="@style/LoginButton"
            android:text="@string/register" />
    </LinearLayout>
</ScrollView>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:id="@+id/progressBar"/>
</FrameLayout>